# LamLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hello.lm  lamina_mock.py  test_lamina.lm
config/: themes.json  themes.xml
data/: advanced_example.lm  example.lm
include/: ConsoleWindow.h  LaminaApp.h  LaminaEditor.h  LaminaIDE.h  LanguageManager.h  MainFrame.h  ProcessExecutor.h  ProcessManager.h  ProjectExplorerWindow.h  TextEditorWindow.h  ThemeConfig.h
script/windows/: run.bat  run_debug.bat
src/: CodeCell.cpp  CodeCell.h  ConsoleWindow.cpp  LaminaApp.cpp  LaminaEditor.cpp  LaminaHighlighter.cpp  LaminaHighlighter.h  LaminaIDE.cpp  LaminaIDE.h  MainFrame.cpp  OnTheme.cpp  ProcessExecutor.cpp  ProcessManager.cpp  ProjectExplorerWindow.cpp  TextCell.cpp  TextCell.h  TextEditorWindow.cpp  ThemeConfig.cpp  main.cpp
syntaxes/: lamina.tmLanguage.json
